--- a/blogposts.html
+++ b/blogposts.html
@@ -24,7 +24,7 @@
                         <div class="nav-menu">
                                 <ul>
                                         <li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-                                        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+                                        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
                                         <li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
                                         <li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
                                         <li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
@@ -70,9 +70,9 @@
                                         
 
 
-
+						
+			<li><a href="https://octaviomaury.github.io/blog-movieportalup.html">The Movie Portal is Up! - 2021.22.5</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-blogpostarchive.html">Blog Post Archive - 2021.13.5</a></li>
-			<!--hey, how are ya?-->
                         <li><a href="https://octaviomaury.github.io/blogvimcool.html">Vim is pretty cool - 2021.9.5</a></li>    
                         <li><a href="https://octaviomaury.github.io/blogartportallives.html">The Art Portal Lives! - 2021.1.5
                         <li><a href="https://octaviomaury.github.io/blogpreviewartportal.html">Preview to The Art Portal - 2021.1.5</a></li>
