--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--thanks andy for my 404 page kekekekek-->
     <style>
  .colortext {
    color:#8d8d6A;
@@ -29,7 +30,7 @@
 			<div class="nav-menu">
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
- 	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+ 	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
