--- a/movieportalcowchicken.html
+++ b/movieportalcowchicken.html
@@ -29,7 +29,7 @@
                           <div class="nav-menu">
                                   <ul>
                                           <li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-            			        	<li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
+            			        	<li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
                                           <li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
                                           <li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
                                           <li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
