--- a/blog-movieportalup.html
+++ b/blog-movieportalup.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Preview to The Art Portal</title>
+  <title>The Movie Portal is Up!</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,25 +50,28 @@
 
     <div class="topicmenu">
                 <div class="toptop">
-                        <div class="topictitle">Preview to The Art Portal - 2021.1.5</div>
+                        <div class="topictitle">The Movie Portal is Up!- 2021.22.5</div>
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
-
-   					&nbsp;Art Portal coming soon. I'm workin' on it!
-            <br><br>
-            &nbsp;Here's a screenshot of what I got so far in the meantime.
-            <br><br>
-            &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
-            <br><br>
-            &nbsp;Happy Pico Day, by the way! Long live Newgrounds!                               
-
+				&nbsp; The Movie Portal is up. Actually, its been done since last night but I was too tired
+				to write a blog post about it. &nbsp;I'm gonna be postin animations and stuff as well as whatever
+				I feel like lol. Last night I put up <a href="https://octaviomaury.github.io/movieportalhelloworld.html"
+				target="blank">this video</a> where &nbsp;I run a C script. It's pretty cool.
+				<br><br>
+				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
+				 like skating gear or a &nbsp;new computer.
+				<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
                                         </div>
-				<div class="topicsignature">Octo-</div>
+                                <div class="topicsignature">Octo-</div>
                         </div>
                 <div class="topicfoot"></div>
 
     </div></div>
 
         <div class="foot"></div>
- 
+
+
