--- a/movieportalwhoimpostor.html
+++ b/movieportalwhoimpostor.html
@@ -48,7 +48,7 @@
                   <div class="navfill">
                   <div class="navinfo">
                           <div class="nav-menu">
-				  <span class="colortext">&nbsp;[put this shit in later]</span>
+				  <span class="colortext">&nbsp;2020.6.10</span>
                           </div>
                   </div>
                   </div>
