--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">"boohoo, im so sad"</span>
+				&nbsp;<span class="colortext">this is weird</span>
 
 			</div>
 		</div>
@@ -74,12 +74,36 @@
 <div id="COL-right">
 
 
+	<div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">The Movie Portal is Up! - 2021.22.5</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+				&nbsp; The Movie Portal is up. Actually, its been done since last night but I was too tired
+				to write a blog post about it. &nbsp;I'm gonna be postin animations and stuff as well as whatever
+				I feel like lol. Last night I put up <a href="https://octaviomaury.github.io/movieportalhelloworld.html"
+				target="blank">this video</a> where &nbsp;I run a C script. It's pretty cool.
+				<br><br>
+				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
+				 like skating gear or a &nbsp;new computer.
+				<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
+
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+        </div>
  <div class="topicmenu">
                 <div class="toptop">
                         <div class="topictitle">Blog Post Archive - 2021.13.5</div>
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
+
 				&nbsp;I made a brand-new page on the site. Check it out!
 				<br>
 				&nbsp;<a href="https://octaviomaury.github.io/blogposts.html">https://octaviomaury.github.io/blogposts.html</a>
@@ -108,7 +132,7 @@
                                 <div class="topicsignature">Octo-</div>
                         </div>
                 <div class="topicfoot"></div>
-        </div>
+                </div>
 
 
 	<div class="topicmenu">
@@ -143,51 +167,6 @@
 
 
 
-
-
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">The Art Portal lives! - 2021.1.5</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;The Art Portal is up!
-            <br><br>
-            &nbsp;I'm gonna work on making it fancier over the coming days, and once im done with <i>that</i> I'm gonna get to work on
-            <br> &nbsp;the Movie Portal.
-            <br><br>
-            &nbsp;The main additions that will be made to the Art Portal are making actual sites for each drawing <i>(Like what
-            <br> &nbsp;Newgrounds does)</i> that will show more info like the date and description
-            instead of the shitty Github links that
-            <br> &nbsp;just open the drawing in a new tab.
-            <br><br>
-            &nbsp;So, stay tuned for that.
-            <br><br>
-            &nbsp;Cheers.
-  					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
-
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">Preview to the Art Portal - 2021.1.5</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;Art Portal coming soon. I'm workin' on it!
-            <br><br>
-            &nbsp;Here's a screenshot of what I got so far in the meantime.
-            <br><br>
-            &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
-            <br><br>
-            &nbsp;Happy Pico Day, by the way! Long live Newgrounds!
-  					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
 
 
 
