--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">this is weird</span>
+				&nbsp;<span class="colortext">this place is not metal!!</span>
 
 			</div>
 		</div>
