--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">My parents got me a bottle &nbsp;of Pepto Bismol for my &nbsp;birthday</span>
+				&nbsp;<span class="colortext">Stop ticling me dude, I got &nbsp;the coffee shits rn</span>
 
 			</div>
 		</div>
