--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">Stop tickling me dude, I got &nbsp;the coffee shits rn</span>
+				&nbsp;<span class="colortext">I took a shower last night</span>
 
 			</div>
 		</div>
