--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				&nbsp;<span class="colortext">I took a shower last night</span>
+				<div align="center"><img src="images/alientorrenting.gif" height="130"</img></div>
 
 			</div>
 		</div>
