--- a/gaylist.html
+++ b/gaylist.html
@@ -64,11 +64,15 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.21.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.27.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+				<li>Terraria</li>	
+				<li>Trench-foot</li>		
+				<li>Smash Bros</li>
+				<li>showering</li>
 				<li>Plant cells</li>
 				<li>The Soviet Union</li> 		
 				<li>V-tuber</li>
