--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<div align="center"><img src="images/alientorrenting.gif" height="130"</img></div>
-
+				<span class="colortext">&nbsp;There's no rules for evil &nbsp;people!</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
