--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;There's no rules for evil &nbsp;people!</span>
+				<span class="colortext">&nbsp;I oughtta wallop ya</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
