--- a/cartoons.html
+++ b/cartoons.html
@@ -67,10 +67,12 @@
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
-					
-			&nbsp;<a href="https://octaviomaury.github.io/movieportalhelloworld.html"><img src="images/movieportal/helloworldicon.png" height="99" alt="cow and chicken"></a>		
+								
+			&nbsp;<a href="https://octaviomaury.github.io/movieportalenumeration.html"><img src="images/movieportal/enumicon.png" height="99" alt="vim-enum"></a>		
+			&nbsp;<a href="https://octaviomaury.github.io/movieportalhelloworld.html"><img src="images/movieportal/helloworldicon.png" height="99" alt="vimhelloworld"></a>		
 			&nbsp;<a href="https://octaviomaury.github.io/movieportalcowchicken.html"><img src="images/movieportal/cowchickenicon.png" height="99" alt="cow and chicken"></a>		
-			&nbsp;<a href="https://octaviomaury.github.io/movieportaldonnytrump.html"><img src="images/movieportal/donnyicon.png" height="99" alt="donaldtrumphaircut"></a>		
+			&nbsp;<a href="https://octaviomaury.github.io/movieportaldonnytrump.html"><img src="images/movieportal/donnyicon.png" height="99" alt="donaldtrumphaircut"></a>
+			<br>
 			&nbsp;<a href="https://octaviomaury.github.io/movieportalwhoimpostor.html"><img src="images/movieportal/whoimpostoricon.png" height="99" alt="amogus"></a>		
                                 </div>
                         </div>
