--- a/art.html
+++ b/art.html
@@ -66,21 +66,22 @@
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
-					
-					 &nbsp;<a href="https://octaviomaury.github.io/artportaldoodles1.html"><img src="images/artportal/doodles1icon.png" height="100"></a>
-					 &nbsp;<a href="https://octaviomaury.github.io/artportalsouljaboy.html"><img src="images/artportal/soldiericon.png" height="100"></a>
-					 &nbsp;<a href="https://octaviomaury.github.io/artportallinux.html"><img src="images/artportal/linuxicon.png" height="100"></a>
-					&nbsp;<a href="https://octaviomaury.github.io/artportaloctopixel.html"><img src="images/artportal/octopixelicon.png" height="100"></a>
-  					&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html"><img src="images/artportal/deagleicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalwhatareyougay.html"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
-	    <br><br>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalshambler.html"><img src="images/artportal/shamblericon.png" height="100"></a> 
-            &nbsp;<a href="https://octaviomaury.github.io/artportaldoomguy.html"><img src="images/artportal/doomguyicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalatomix.html"><img src="images/artportal/atomixiconicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportaloctosmall.html"><img src="images/artportal/octosmallicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalfury.html"><img src="images/artportal/furyicon.png" height="100"></a>
-                        &nbsp;<a href="https://octaviomaury.github.io/artportalawake.html"><img src="images/artportal/awakeicon.png" height="100"></a>
-            &nbsp;<a href="https://octaviomaury.github.io/artportalquakelive.html"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
+						
+	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles2.html"><img src="images/artportal/doodles2icon.png" height="100"></a>
+	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles1.html"><img src="images/artportal/doodles1icon.png" height="100"></a>
+	&nbsp;<a href="https://octaviomaury.github.io/artportalsouljaboy.html"><img src="images/artportal/soldiericon.png" height="100"></a>
+	&nbsp;<a href="https://octaviomaury.github.io/artportallinux.html"><img src="images/artportal/linuxicon.png" height="100"></a>
+	&nbsp;<a href="https://octaviomaury.github.io/artportaloctopixel.html"><img src="images/artportal/octopixelicon.png" height="100"></a>
+  	&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html"><img src="images/artportal/deagleicon.png" height="100"></a
+	<br><br>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalwhatareyougay.html"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalshambler.html"><img src="images/artportal/shamblericon.png" height="100"></a>
+       	&nbsp;<a href="https://octaviomaury.github.io/artportaldoomguy.html"><img src="images/artportal/doomguyicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalatomix.html"><img src="images/artportal/atomixiconicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportaloctosmall.html"><img src="images/artportal/octosmallicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalfury.html"><img src="images/artportal/furyicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalawake.html"><img src="images/artportal/awakeicon.png" height="100"></a>
+        &nbsp;<a href="https://octaviomaury.github.io/artportalquakelive.html"><img src="images/artportal/quakeliveinstagibicon.png" height="100"></a>
 
 
 
