--- a/gaylist.html
+++ b/gaylist.html
@@ -64,11 +64,14 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.27.5</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.30.5</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
   					<ul id="gaylist">
+
+				<li>Duke Nukem Forever<li>		
+				<li>Jury duty</li>
 				<li>Terraria</li>	
 				<li>Trench-foot</li>		
 				<li>Smash Bros</li>
