--- a/gaylist.html
+++ b/gaylist.html
@@ -70,7 +70,7 @@
   				<div class="topicinfo">
   					<ul id="gaylist">
 
-				<li>Duke Nukem Forever<li>		
+				<li>Duke Nukem Forever</li>		
 				<li>Jury duty</li>
 				<li>Terraria</li>	
 				<li>Trench-foot</li>		
