--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"your eyes, they glow like a &nbsp;brown rope"</span>
+				<span class="colortext">&nbsp;I gotta get new hands one of &nbsp;these days</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
