--- a/blog-movieportalup.html
+++ b/blog-movieportalup.html
@@ -61,6 +61,8 @@
 				<br><br>
 				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
 				 like skating gear or a &nbsp;new computer.
+				 <br><br>
+				<img src="images/kitchen.png" alt="RR-kitchen" height="300">
 				<br><br>
 				&nbsp;Thats about it.
 				<br><br>
