--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;I gotta get new hands one of &nbsp;these days</span>
+				<span class="colortext">&nbsp;I gotta get new hands one &nbsp;of these days</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -86,6 +86,8 @@
 				<br><br>
 				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
 				 like skating gear or a &nbsp;new computer.
+				 <br><br>
+				<img src="images/kitchen.png" alt="RR-kitchen" height="300">
 				<br><br>
 				&nbsp;Thats about it.
 				<br><br>
