--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Sorry sir, you've got a little &nbsp;bit of poop on your testicles</span>
+				<span class="colortext">&nbsp;sub to my hut tub streams &nbsp;pls</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
