--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;I wouldnt touch you with a &nbsp;20 foot pole</span>
+				<span class="colortext">&nbsp;Are you hiding my boxers?</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
