--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;That is one doomed space marine</span>
+				<span class="colortext">&nbsp;"break it up boys, party's over. You can't be doin that to the watermelon"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
