--- a/gaylist.html
+++ b/gaylist.html
@@ -68,7 +68,15 @@
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
+					<div align="center">
+					<!--thanks to Owen Cryptospore for makin this funny picture-->
+					<!--https://cryptospore.newgrounds.com/-->
+					<img src="images/welcomegaylist2.png" alt="welcometothegaylist" height="300">
+					</div>
+
   					<ul id="gaylist">
+				<li>Ebooks</li>
+				<li>Chinese factory suicide nets</li>
 				<li>Fine Bros</li>
 				<li>Duke Nukem Forever</li>		
 				<li>Jury duty</li>
