--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;These Scottish boys sure do like &nbsp;heroin, don't they?</span>
+				<span class="colortext">&nbsp;All my homies hate thew CCP</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
