--- a/gaylist.html
+++ b/gaylist.html
@@ -94,7 +94,8 @@
 				<li>Starbomb</li>	
 				<li>Portuguese</li>
 				<li>RPG Anims</li>
-				<li>luis</li> 		
+				<!--fuc you, luis you're staying on here-->
+				<b><li style="font-size:30px;">luis</li></b> 		
 				<li>Israel</li>
 				<li>Microsoft</li>
 				<li>Apple</li>		
