--- a/gaylist.html
+++ b/gaylist.html
@@ -64,7 +64,7 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.10.6</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.11.6</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -75,6 +75,9 @@
 					</div>
 
   					<ul id="gaylist">
+				<li>Tapeworms</li>
+				<li>Epic Games<li>
+				<li>Roblox</li>
 				<li>Tiananmen Square</li>
 				<li>Ebooks</li>
 				<li>Chinese factory suicide nets</li>
