--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;All my homies hate thew CCP</span>
+				<span class="colortext">&nbsp;"sign my petition or I'll follow you &nbsp;home and kill your dog"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
