--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		<div class="navfooter"></div>
 	</div>
 
-
+	<!--large fart!!!-->
 
 </div>
 <div id="COL-right">
@@ -70,12 +70,14 @@
   			<div class="topicmid">
   				<div class="topicinfo">
   					&nbsp;My name is <a href="https://octo.newgrounds.com" target="_new">Octavio "Octo" Maury</a> and I do cartoons sometimes.
-            <br>
-            &nbsp;I really like retro shooter games, heavy metal and the S.T.A.L.K.E.R. franchise. Cheeki breeki iv damke!
-            <br><br>
-            &nbsp;If you want to contact me, you can reach me @ <span class="colortext"><i>octaviomaury1@gmail.com</i></span> and <span class="colortext"><i>OctoNG#3832</i></span>
-            <br><br>
+					<br><br>
+            &nbsp;I really like Newgrounds, Linux, power metal and Quake.
+	    <br><br>
             &nbsp<img src="images/evil.png" height="130">
+            <br><br>
+	    &nbsp;If you want to contact me, you can reach me @ <span class="colortext"><i>octaviomaury1@gmail.com</i></span>, <span class="colortext"><i>OctoNG#3832</i></span>and <span class="colortext"><i>@octo-:matrix.org</i></span>
+            <br><br>
+	    &nbsp<img src="images/beavisbuttheadmail.gif" height="130"><img src="images/emailme.gif" height="130">
             <br><br>
             &nbsp;This website uses a free CSS template from <a href="http://themekings.net/" target="_new">ThemeKings.net</a>
             <br><br>
