--- a/gaylist.html
+++ b/gaylist.html
@@ -76,13 +76,13 @@
 
   					<ul id="gaylist">
 				<li>Tapeworms</li>
-				<li>Epic Games<li>
+				<li>Epic Games</li>
 				<li>Roblox</li>
 				<li>Tiananmen Square</li>
 				<li>Ebooks</li>
 				<li>Chinese factory suicide nets</li>
 				<li>Fine Bros</li>
-				<li>Duke Nukem Forever</li>		
+				<li>Duke Nukem Forever</li>
 				<li>Jury duty</li>
 				<li>Terraria</li>	
 				<li>Trench-foot</li>		
