--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Octavio Maury</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
+  <link rel="icon" type="image/png" href="images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--thanks andy for my 404 page kekekekek-->
     <style>
