--- a/images/index.html
+++ b/images/index.html
@@ -3,9 +3,15 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Octavio Maury</title>
-  <link href="military/themecss.css" rel="stylesheet" type="text/css" media="all">
+  <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--thanks andy for my 404 page kekekekek-->
+    <style>
+ .colortext {
+   color:#8d8d6A;
+ }
+</style>
 </head>
 
 <div id="bodycontainer">
@@ -24,10 +30,11 @@
 			<div class="nav-menu">
 				<ul>
 					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
-          <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal (WIP)</a></li>
-					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal (WIP)</a></li>
+ 	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
+					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
 					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
+					<li><a href="https://octaviomaury.github.io/blogposts.html">Blog Posts</a></li>
 				</ul>
 			</div>
 		</div>
@@ -37,14 +44,10 @@
 
 
 	<div class="navbox">
-		<div class="navhead">Links</div>
-		<div class="navfill">
-		<div class="navinfo">
-			<div class="nav-menu">
+		<div class="navhead">Links</div> <div class="navfill"> <div class="navinfo"> <div class="nav-menu">
 				<ul>
 					<li><a href="https://octo.newgrounds.com/" target="_new">Newgrounds</a></li>
 					<li><a href="https://www.youtube.com/channel/UC4ud3m2IHZ0P1o7UNg6cPMA" target="_new">Youtube</a></li>
-					<li><a href="https://twitter.com/TheOctoNG" target="_new">Twitter</a></li>
 				</ul>
 			</div>
 		</div>
@@ -56,12 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-
-				&nbsp;You ever hear of Quake?
-				<br>
-				<br>
-				<br>
-
+				<span class="colortext">&nbsp;"how'd he get up there?"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -74,45 +72,97 @@
 
 <div id="COL-right">
 
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">Preview to the Art Portal - 2021.1.5</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;Art Portal coming soon. I'm workin' on it!
-            <br><br>
-            &nbsp;Here's a screenshot of what I got so far in the meantime.
-            <br><br>
-            &nbsp;  <img src="images/artportalsneakpeek.png" height="150">
-            <br><br>
-            &nbsp;Happy Pico Day, by the way! Long live Newgrounds!
-  					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
+
+	<div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">octaviomaury.com domain name - 2021.13.6</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+					&nbsp; I am now the proud owner of the <span class="colortext">octaviomaury.com</span> domain,
+					no silly .github.io shit. I'm surprised how cheap I got it for, actually, it was &nbsp;only 8$/year.
+					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo 
+					-related needs.			
+				<img src="images/computer-01.gif" alt="computer" height="300">
+				<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
+
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+
+	<div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">The Movie Portal is Up! - 2021.22.5</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+				&nbsp; The Movie Portal is up. Actually, its been done since last night but I was too tired
+				to write a blog post about it. &nbsp;I'm gonna be postin animations and stuff as well as whatever
+				I feel like lol. Last night I put up <a href="https://octaviomaury.github.io/movieportalhelloworld.html"
+				target="blank">this video</a> where &nbsp;I run a C script. It's pretty cool.
+				<br><br>
+				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
+				 like skating gear or a &nbsp;new computer.
+				 <br><br>
+				<img src="images/kitchen.png" alt="RR-kitchen" height="300">
+				<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
+
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+        </div>
+ <div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">Blog Post Archive - 2021.13.5</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+
+				&nbsp;I made a brand-new page on the site. Check it out!
+				<br>
+				&nbsp;<a href="https://octaviomaury.github.io/blogposts.html">https://octaviomaury.github.io/blogposts.html</a>
+				<br><br>
+				&nbsp;Very early on in the redesigning of my site, I realized that after a while, the Blog Posts would probably
+				take up &nbsp;a lot of space on the homepage, and that would probably be a pain in the ass for anyone
+				with slow internet.
+				<br><br>
+				&nbsp;So, making <a href="https://octaviomaury.github.io/blogposts.html">an archive</a> for blog posts has been on my mind for a while now. Turns out it was extraordinarily
+				&nbsp;easy to do.
+				<br><br>
+				&nbsp;<img src="images/vimscreenshot.png" alt="vimscreenshot.png" height="160">
+				<br><br>
+				&nbsp;Pretty much everything about making a website is deceptively easy to do.
+				<br><br>
+				&nbsp;So, from now on only 3 blog posts will be shown on the homepage, and if you wanna read older posts,
+				just go &nbsp;through <a href="https://octaviomaury.github.io/blogposts.html">The Archives</a>
+				<br><br>
+				&nbsp;Another cool thing this new archive allows for is easier sharing, as each post now has it's own url.
+				<!--idk why you'd wanna share my posts but whatever-->
+				<br><br>
+				&nbsp;Errrrm that's about it.				
+				<br><br>
+            &nbsp;Cheers.
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
+                </div>
+
+        </div>
 
 
 
-  <div class="topicmenu">
-  		<div class="toptop">
-  			<div class="topictitle">New Look to Site #winning - 2021.30.4</div>
-  		</div>
-  			<div class="topicmid">
-  				<div class="topicinfo">
-  					&nbsp;Old look was gay and ugly. I found a css. template online, and it had an old-school Newgrounds look and <br> &nbsp;thought it was epic. <br>
-            <br>
-            &nbsp;I'm gonna have more stuff on here soon. Hope you like it, boys.
-            <br><br>
-            &nbsp;And if you don't like the new look, the old one is on the <a href="http://web.archive.org/web/*/https://octaviomaury.github.io/index.html" target="_new">WayBack Machine</a>, so fuck off over there.
-            <br><br>
-            &nbsp;  <img src="images/hacking.gif" height="150">
-  					</div>
-  				<div class="topicsignature">Octo-</div>
-  			</div>
-  		<div class="topicfoot"></div>
-  	</div>
+
+
+
 
   </div>
 
