--- a/blogposts.html
+++ b/blogposts.html
@@ -62,7 +62,7 @@
 
     <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Blog Posts - 2021.13.5</div>
+  			<div class="topictitle">Blog Posts - 2021.13.6</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -71,6 +71,7 @@
 
 
 						
+			<li><a href="https://octaviomaury.github.io/blog-domainname.html">octaviomaury.com domain name - 2021.13.6</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-movieportalup.html">The Movie Portal is Up! - 2021.22.5</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-blogpostarchive.html">Blog Post Archive - 2021.13.5</a></li>
                         <li><a href="https://octaviomaury.github.io/blogvimcool.html">Vim is pretty cool - 2021.9.5</a></li>    
