--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Octavio Maury</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="icon" type="image/png" href="images/pfp.png">
+  <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--thanks andy for my 404 page kekekekek-->
     <style>
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"sign my petition or I'll follow you &nbsp;home and kill your dog"</span>
+				<span class="colortext">&nbsp;"how'd he get up there?"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -72,6 +72,27 @@
 
 <div id="COL-right">
 
+
+	<div class="topicmenu">
+                <div class="toptop">
+                        <div class="topictitle">octaviomaury.com domain name - 2021.13.6</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+					&nbsp; I am now the proud owner of the <span class="colortext">octaviomaury.com</span> domain,
+					no silly .github.io shit. I'm surprised how cheap I got it for, actually, it was &nbsp;only 8$/year.
+					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo 
+					-related needs.			
+				<img src="images/computer-01.gif" alt="computer" height="300">
+				<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
+
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
 
 	<div class="topicmenu">
                 <div class="toptop">
@@ -135,35 +156,6 @@
                 <div class="topicfoot"></div>
                 </div>
 
-
-	<div class="topicmenu">
-                <div class="toptop">
-                        <div class="topictitle">Vim is pretty cool - 2021.9.5</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-					&nbsp;My friend told me that Vim is cool text editor,
-					so I checked it out and it turns out that it is actually pretty cool.
-					&nbsp;I'm gonna be doin all my html shenanigans on NeoVim from now on.
-					&nbsp;If you don't know what Vim is, it's a text &nbsp;editor that runs entirely from the Linux terminal,
-					so it's very lightweight and very quick.
-					<br><br>
-					&nbsp;<a href="https://www.vim.org/download.php" target="_new" >Download Vim here.</a>
-					<br><br>
-					&nbsp;(I actually don't know how it works on Windows, I'm pretty sure it opens up a GUI. CRINGE!!!)
-					<br><br>
-					&nbsp;So, uhh get Artix Linux because Windows gay, use Vim for text editing, and I'll get to work on 
-					the Movie Portal &nbsp;sometime maybe.
-					<br><br>
-					&nbsp;<a href="https://octaviomaury.github.io/artportallinux.html">
-						<img src="images/artportal/linux.gif" height="160"></a>
-
-            <br><br>
-            &nbsp;Cheers.
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
         </div>
 
 
