--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>404</title>
-<link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
+<link rel="icon" type="image/png" href="images/pfp.png">
 <link rel="stylesheet" href="themecss.css">
 <meta name="description" content="uh oh!">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
