--- a/blogartportallives.html
+++ b/blogartportallives.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>The Art Portal Lives!</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
+  <link rel="icon" type="image/png" href="images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
  .colortext {
