--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"how'd he get up there?"</span>
+				<span class="colortext">&nbsp;"yooo naked breasts in Quake!!!"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
