changed portrait on the about page

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 	    <br><br>
 	    &nbsp;I created this website not just as a way to archive all my stuff, but also as a sort of replacement for social media.
 	    <br><br>
-            &nbsp<img src="images/evil.png" height="130">
+            &nbsp<img src="images/octomonster.png" height="130">
             <br><br>
 	    &nbsp;If you want to contact me, you can reach me @ <span class="colortext"><i>octaviomaury1@gmail.com</i></span>, <span class="colortext"><i>OctoNG#3832</i></span>and <span class="colortext"><i>@octo-:matrix.org</i></span>
             <br><br>
