--- a/movieportalmadlibprogram2.html
+++ b/movieportalmadlibprogram2.html
@@ -3,7 +3,7 @@
    <html lang="en" dir="ltr"><head>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
      <meta charset="utf-8">
-     <title>Simple Madlib Program written in C<title>
+     <title>Simple Madlib Program written in C</title>
      <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
      <link rel="icon" type="image/png" href="images/pfp.png">
      <meta name="viewport" content="width=device-width, initial-scale=1">
