--- a/gaylist.html
+++ b/gaylist.html
@@ -75,6 +75,7 @@
 					</div>
 
   					<ul id="gaylist">
+				<li>Red Robin Restaurant</li>
 				<li>Tapeworms</li>
 				<li>Epic Games</li>
 				<li>Roblox</li>
