--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;I can break thesse cuffs</span>
+				<span class="colortext">&nbsp;I can break these cuffs</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
