--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;I just wanna watch funny shit on &nbsp;4chan, man</span>
+				<span class="colortext">&nbsp;"Pico from FnF!!"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -81,8 +81,7 @@
                                 <div class="topicinfo">
 					&nbsp; I am now the proud owner of the <span class="colortext">octaviomaury.com</span> domain,
 					no silly .github.io shit. I'm surprised how cheap I got it for, actually, it was &nbsp;only 8$/year.
-					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo 
-					-related needs.			
+					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo-related needs.			
 				<img src="images/computer-01.gif" alt="computer" height="300">
 				<br><br>
 				&nbsp;Thats about it.
