--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"Pico from FnF!!"</span>
+				<span class="colortext">&nbsp;Be nice to ur dad</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
