--- a/gaylist.html
+++ b/gaylist.html
@@ -64,7 +64,7 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.11.6</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.21.6</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -75,6 +75,7 @@
 					</div>
 
   					<ul id="gaylist">
+				<li>xfce</li>
 				<li>Red Robin Restaurant</li>
 				<li>Tapeworms</li>
 				<li>Epic Games</li>
@@ -99,7 +100,7 @@
 				<li>Portuguese</li>
 				<li>RPG Anims</li>
 				<!--fuc you, luis you're staying on here-->
-				<b><li style="font-size:31px;">luis</li></b> 		
+				<b><li style="font-size:32px;">luis</li></b> 		
 				<li>Israel</li>
 				<li>Microsoft</li>
 				<li>Apple</li>		
