--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"The voices tell me to &nbsp;smoke weed"</span>
+				<span class="colortext">&nbsp;"IT'S SHITE BEING SCOTTISH!"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
