--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 		</div>
 		<div class="navfooter"></div>
 	</div>
+		
+	<div class="navbox">
+		<div class="navhead">RSS</div>
+		<div class="navfill">
+		<div class="navinfo">
+			<div class="nav-menu">
+				<ul>
+					<li><a href="https://octaviomaury.com/feeds/octaviomaury-blog.xml">Blog RSS</a></li>
+				</ul>
+			</div>
+		</div>
+		</div>
+		<div class="navfooter"></div>
+	</div>
 
 	<div class="navbox">
 		<div class="navhead">Quip of the Day</div>
