--- a/art.html
+++ b/art.html
@@ -67,13 +67,14 @@
   			<div class="topicmid">
   				<div class="topicinfo">
 						
+					
+	&nbsp;<a href="https://octaviomaury.github.io/artportaldaemonbirthday.html"><img src="images/artportal/daemonbirthicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles2.html"><img src="images/artportal/doodles2icon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles1.html"><img src="images/artportal/doodles1icon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportalsouljaboy.html"><img src="images/artportal/soldiericon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportallinux.html"><img src="images/artportal/linuxicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaloctopixel.html"><img src="images/artportal/octopixelicon.png" height="100"></a>
-  	&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html"><img src="images/artportal/deagleicon.png" height="100"></a
-	<br><br>
+	&nbsp;<a href="https://octaviomaury.github.io/artportaldeagle.html"><img src="images/artportal/deagleicon.png" height="100"></a>
         &nbsp;<a href="https://octaviomaury.github.io/artportalwhatareyougay.html"><img src="images/artportal/whatareyougayicon.png" height="100"></a>
         &nbsp;<a href="https://octaviomaury.github.io/artportalshambler.html"><img src="images/artportal/shamblericon.png" height="100"></a>
        	&nbsp;<a href="https://octaviomaury.github.io/artportaldoomguy.html"><img src="images/artportal/doomguyicon.png" height="100"></a>
