--- a/blog-domainname.html
+++ b/blog-domainname.html
@@ -55,9 +55,9 @@
                         <div class="topicmid">
                                 <div class="topicinfo">
 					&nbsp; I am now the proud owner of the <span class="colortext">octaviomaury.com</span> domain,
-					no silly .github.io shit. I'm surprised how cheap I got it for, actually, it was &nbsp;only 8$/year.
-					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo 
-					-related needs.			
+					no silly .github.io shit. I'm surprised how cheap I &nbsp;got it for, actually, it was &nbsp;only 8$/year.
+					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo-related &nbsp;needs.
+					<br>
 				<img src="images/computer-01.gif" alt="computer" height="300">
 				<br><br>
 				&nbsp;Thats about it.
