--- a/art.html
+++ b/art.html
@@ -68,6 +68,7 @@
   				<div class="topicinfo">
 						
 					
+	&nbsp;<a href="https://octaviomaury.github.io/artportalfatherson-bonding.html"><img src="images/artportal/fathersonicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaldaemonbirthday.html"><img src="images/artportal/daemonbirthicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles2.html"><img src="images/artportal/doodles2icon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportaldoodles1.html"><img src="images/artportal/doodles1icon.png" height="100"></a>
