--- a/artportaldoodles1.html
+++ b/artportaldoodles1.html
@@ -1,11 +1,10 @@
-
-   <!DOCTYPE html>
-   <html lang="en" dir="ltr"><head>
-   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-     <meta charset="utf-8">
-     <title>Doodles 001</title>
-     <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-     <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head> <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta charset="utf-8"> 
+<title>Doodles 001</title> 
+<link href="themecss.css" rel="stylesheet" type="text/css" media="all"> 
+<link rel="icon" type="image/png" href="/images/pfp.png">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <style>
     .colortext {
@@ -33,7 +32,6 @@
             <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
                                           <li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
                                           <li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
-                                          <li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
                                  </ul>
                           </div>
                   </div>
