--- a/artportalfury.html
+++ b/artportalfury.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>fury.gif</title>
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="icon" type="image/png" href="https://octaviomaury.github.io/images/pfp.png">
+  <link rel="icon" type="image/png" href="images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
  .colortext {
@@ -32,7 +32,6 @@
           <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
-					<li><a href=" https://octaviomaury.github.io/gaylist.html">Gay List</a></li>
 				</ul>
 			</div>
 		</div>
