--- a/blog-gaylistremoval.html
+++ b/blog-gaylistremoval.html
@@ -49,7 +49,7 @@
 
     <div class="topicmenu">
                 <div class="toptop">
-                        <div class="topictitle">octaviomaury.com domain name - 2021.13.6</div>
+                        <div class="topictitle">gaylist and other news - 2021.27.6</div>
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
@@ -64,6 +64,13 @@
 					&nbsp;Don't worry :)
 					<br><br>
 					&nbsp;<img src="images/gaylistdead.png" height="300">
+					<br><br>
+					&nbsp; In other news, school let out for summer break, so now I can start workin on the website more than I
+					could've<br>  &nbsp;with homework breathing down my neck (kidding. I never actually did the homework. STICK IT TO DA MAN!)
+					<br><br>
+					&nbsp;Yesterday, the first day after school let out, I had a power outage for about 7 or 8 hours, and spent most of the <br>
+					&nbsp;day in the backyard with my family. at some point it got dark and we were going to bed, and after we had fallen<br> &nbsp;asleep,  
+					&nbsp;at exactly 1AM, the power came back, and every light in the house turned on simultaneously. It was<br> &nbsp;pretty funny.
 					<br><br>
 				&nbsp;Thats about it.
 				<br><br>
