--- a/index.html
+++ b/index.html
@@ -84,6 +84,38 @@
 
 
 <div id="COL-right">
+	
+                <div class="toptop">
+                        <div class="topictitle">gaylist and other news - 2021.27.6</div>
+                </div>
+                        <div class="topicmid">
+                                <div class="topicinfo">
+					&nbsp; lmao im not even gonna attempt to sugarcoat this, but I got fired from my burger place job,
+					and my it might've &nbsp;been because of the gaylist on here being so "not PC". so as an attempt to not
+					scare away any future &nbsp;employers, I've unlisted it from any navigation panels. Of course, I wouldn't
+					ever remove it <b>completely</b> as I<br>&nbsp;still think it's funny and im doing this kind of reluctantly. 
+					You can still view the gaylist &nbsp;if you follow <br> &nbsp;<a href="https://octaviomaury.com/gaylist.html">this hyperlink</a> 
+					or if you have it bookmarked, &nbsp;or if you look at the html files on 
+					<a href=https://github.com/OctavioMaury/octaviomaury.github.io>my Github</a>. I'm hoping to maybe<br> &nbsp;at 
+					some point in &nbsp;the future bring it back, but for now, its gonna remain unlisted. I'm gonna keep updating it.<br>
+					&nbsp;Don't worry :)
+					<br><br>
+					&nbsp;<img src="images/gaylistdead.png" height="300">
+					<br><br>
+					&nbsp; In other news, school let out for summer break, so now I can start workin on the website more than I
+					could've<br>  &nbsp;with homework breathing down my neck (kidding. I never actually did the homework. STICK IT TO DA MAN!)
+					<br><br>
+					&nbsp;Yesterday, the first day after school let out, I had a power outage for about 7 or 8 hours, and spent most of the <br>
+					&nbsp;day in the backyard with my family. at some point it got dark and we were going to bed, and after we had fallen<br> &nbsp;asleep,  
+					&nbsp;at exactly 1AM, the power came back, and every light in the house turned on simultaneously. It was<br> &nbsp;pretty funny.
+					<br><br>
+				&nbsp;Thats about it.
+				<br><br>
+            &nbsp;Cheers.
+                                        </div>
+                                <div class="topicsignature">Octo-</div>
+                        </div>
+                <div class="topicfoot"></div>
 
 
 	<div class="topicmenu">
@@ -132,40 +164,6 @@
                 <div class="topicfoot"></div>
         </div>
  <div class="topicmenu">
-                <div class="toptop">
-                        <div class="topictitle">Blog Post Archive - 2021.13.5</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-
-				&nbsp;I made a brand-new page on the site. Check it out!
-				<br>
-				&nbsp;<a href="https://octaviomaury.github.io/blogposts.html">https://octaviomaury.github.io/blogposts.html</a>
-				<br><br>
-				&nbsp;Very early on in the redesigning of my site, I realized that after a while, the Blog Posts would probably
-				take up &nbsp;a lot of space on the homepage, and that would probably be a pain in the ass for anyone
-				with slow internet.
-				<br><br>
-				&nbsp;So, making <a href="https://octaviomaury.github.io/blogposts.html">an archive</a> for blog posts has been on my mind for a while now. Turns out it was extraordinarily
-				&nbsp;easy to do.
-				<br><br>
-				&nbsp;<img src="images/vimscreenshot.png" alt="vimscreenshot.png" height="160">
-				<br><br>
-				&nbsp;Pretty much everything about making a website is deceptively easy to do.
-				<br><br>
-				&nbsp;So, from now on only 3 blog posts will be shown on the homepage, and if you wanna read older posts,
-				just go &nbsp;through <a href="https://octaviomaury.github.io/blogposts.html">The Archives</a>
-				<br><br>
-				&nbsp;Another cool thing this new archive allows for is easier sharing, as each post now has it's own url.
-				<!--idk why you'd wanna share my posts but whatever-->
-				<br><br>
-				&nbsp;Errrrm that's about it.				
-				<br><br>
-            &nbsp;Cheers.
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
                 </div>
 
         </div>
