--- a/gaylist.html
+++ b/gaylist.html
@@ -64,7 +64,7 @@
 
   <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Things I Think Are Gay - 2021.21.6</div>
+  			<div class="topictitle">Things I Think Are Gay - 2021.27.6</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -75,6 +75,7 @@
 					</div>
 
   					<ul id="gaylist">
+				<li>McDonalds</li>
 				<li>xfce</li>
 				<li>Red Robin Restaurant</li>
 				<li>Tapeworms</li>
