--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;LOLCOW!!!</span>
+				<span class="colortext">&nbsp;Reddit win!!!!</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
