--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Reddit win!!!!</span>
+				<span class="colortext">&nbsp;"We suck more!"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -85,39 +85,6 @@
 
 <div id="COL-right">
 	
-                <div class="toptop">
-                        <div class="topictitle">gaylist and other news - 2021.27.6</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-					&nbsp; lmao im not even gonna attempt to sugarcoat this, but I got fired from my burger place job,
-					and my it might've &nbsp;been because of the gaylist on here being so "not PC". so as an attempt to not
-					scare away any future &nbsp;employers, I've unlisted it from any navigation panels. Of course, I wouldn't
-					ever remove it <b>completely</b> as I<br>&nbsp;still think it's funny and im doing this kind of reluctantly. 
-					You can still view the gaylist &nbsp;if you follow <br> &nbsp;<a href="https://octaviomaury.com/gaylist.html">this hyperlink</a> 
-					or if you have it bookmarked, &nbsp;or if you look at the html files on 
-					<a href=https://github.com/OctavioMaury/octaviomaury.github.io>my Github</a>. I'm hoping to maybe<br> &nbsp;at 
-					some point in &nbsp;the future bring it back, but for now, its gonna remain unlisted. I'm gonna keep updating it.<br>
-					&nbsp;Don't worry :)
-					<br><br>
-					&nbsp;<img src="images/gaylistdead.png" height="300">
-					<br><br>
-					&nbsp; In other news, school let out for summer break, so now I can start workin on the website more than I
-					could've<br>  &nbsp;with homework breathing down my neck (kidding. I never actually did the homework. STICK IT TO DA MAN!)
-					<br><br>
-					&nbsp;Yesterday, the first day after school let out, I had a power outage for about 7 or 8 hours, and spent most of the <br>
-					&nbsp;day in the backyard with my family. at some point it got dark and we were going to bed, and after we had fallen<br> &nbsp;asleep,  
-					&nbsp;at exactly 1AM, the power came back, and every light in the house turned on simultaneously. It was<br> &nbsp;pretty funny.
-					<br><br>
-				&nbsp;Thats about it.
-				<br><br>
-            &nbsp;Cheers.
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
-
-
 	<div class="topicmenu">
                 <div class="toptop">
                         <div class="topictitle">octaviomaury.com domain name - 2021.13.6</div>
