--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;You gotta shave</span>
+				<span class="colortext">&nbsp;"hey son, bring your friends &nbsp;over. we gonna grill"
+</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
