--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;"hey son, bring your friends &nbsp;over. we gonna grill"
-</span>
+				<span class="colortext">&nbsp;nice one, anon</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
